--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "front-end"]
 	path = front-end
 	url = https://github.com/mcalderon7/Frontend.git
+[submodule "back-end"]
+	path = back-end
+	url = https://github.com/mcalderon7/Backend.git
